table filter update

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           type="tel"
           name="contact"
           maxlength="10"
-          id="filter-contac"
+          id="filter-contact"
           placeholder="contact Number"
           onkeyup="applyFilters()"
         />
@@ -289,7 +289,7 @@
 
         <input
           type="checkbox"
-          id="lang-en"
+          id="filter-lang-en"
           value="English"
           name="languagesKnown"
           onchange="applyFilters()"
@@ -297,7 +297,7 @@
         English
         <input
           type="checkbox"
-          id="lang-hi"
+          id="filter-lang-hi"
           value="Hindi"
           name="languagesKnown"
           onchange="applyFilters()"
@@ -305,7 +305,7 @@
         Hindi
         <input
           type="checkbox"
-          id="lang-gu"
+          id="filter-lang-gu"
           value="Gujarati"
           name="languagesKnown"
           onchange="applyFilters()"
@@ -313,7 +313,7 @@
         Gujarati
         <input
           type="checkbox"
-          id="lang-mr"
+          id="filter-lang-mr"
           value="Marathi"
           name="languagesKnown"
           onchange="applyFilters()"
